Fixed contract in dark mode.

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     }
 
     input[type=checkbox]:checked+.todo-item span:nth-of-type(2) {
-        @apply line-through text-gray-500;
+        @apply line-through text-gray-500 dark:text-gray-400;
     }
 }
 
